[gd_scene load_steps=4 format=3 uid="uid://cyw263m7yqxne"]

[ext_resource type="PackedScene" uid="uid://ba5xxh4mqr5rb" path="res://hud/background.tscn" id="1_esj67"]
[ext_resource type="Script" path="res://levels/DefaultLevel.gd" id="1_qgpfx"]
[ext_resource type="PackedScene" uid="uid://ce67aewcoviqg" path="res://hud/GameHud.tscn" id="2_g01tn"]

[node name="DefaultLevel" type="Node2D"]
script = ExtResource("1_qgpfx")

[node name="BackgroundLayer" parent="." instance=ExtResource("1_esj67")]

[node name="GameHud" parent="." instance=ExtResource("2_g01tn")]

[node name="BasicTimer" type="Timer" parent="."]

[connection signal="game_exit" from="GameHud" to="." method="_on_game_hud_game_exit"]
[connection signal="game_paused" from="GameHud" to="." method="_on_game_hud_game_paused"]
[connection signal="timeout" from="BasicTimer" to="." method="_on_basic_timer_timeout"]
